force-app/main/default/objects/Contract_Payments__c/Contract_Payments__c.object-meta.xml
<CustomObject>
    <description>Used to capture the contract payment information against each Payment Type.</description>
    <label>Contract Payments</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Contract Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>