force-app/main/default/objects/Contract_Payments__c/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract &amp; Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Payments</relationshipLabel>
    <relationshipName>Contract_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>