force-app/main/default/objects/Contract_Payments__c/fields/Domestic_QDP_Segment_Rate__c.field-meta.xml
<CustomField>
    <fullName>Domestic_QDP_Segment_Rate__c</fullName>
    <label>Domestic QDP Segment Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>