force-app/main/default/objects/Contract_Payments__c/fields/Hurdle_Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Hurdle_Measurement_Unit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hurdle Measurement Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>