force-app/main/default/objects/Contract_Payments__c/fields/Hurdle_rate__c.field-meta.xml
<CustomField>
    <fullName>Hurdle_rate__c</fullName>
    <label>Hurdle rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>