force-app/main/default/objects/Contract_Payments__c/fields/International_QDP_segment_rate__c.field-meta.xml
<CustomField>
    <fullName>International_QDP_segment_rate__c</fullName>
    <label>International QDP segment rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>