force-app/main/default/objects/Contract_Payments__c/fields/Paid_As__c.field-meta.xml
<CustomField>
    <fullName>Paid_As__c</fullName>
    <label>Paid As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Travel Fund</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>ACM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>