force-app/main/default/objects/Contract_Payments__c/fields/Payment_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Payment_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>