force-app/main/default/objects/Contract_Payments__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <description>depended picklist on Type. Should be enabled only for Performance Bonus and Guaranteed payment.</description>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half-Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>