force-app/main/default/objects/Contract_Payments__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Contract Payments</relationshipLabel>
    <relationshipName>Contract_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>