force-app/main/default/objects/Contract_Payments__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>To hold the Agency and Corporate contract payment type information</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guaranteed Payment</fullName>
            </value>
            <value>
                <fullName>One-Off Payment</fullName>
            </value>
            <value>
                <fullName>Performance Bonus</fullName>
            </value>
            <value>
                <fullName>Sign-On Bonus</fullName>
            </value>
            <value>
                <fullName>Tech fund</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>