force-app/main/default/objects/Contract_Payments__c/recordTypes/Channel_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Channel_Incentive</fullName>
    <active>true</active>
    <description>This determines the records that belong to Channel Incentive Contract Payments</description>
    <label>Channel Incentive</label>
</RecordType>