force-app/main/default/objects/Contract_Payments__c/recordTypes/Channel_Tech_Fund.recordType-meta.xml
<RecordType>
    <fullName>Channel_Tech_Fund</fullName>
    <active>true</active>
    <label>Channel Tech Fund</label>
</RecordType>