force-app/main/default/objects/Contract_Payments__c/recordTypes/Corporate_Contract_Payments.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Contract_Payments</fullName>
    <active>true</active>
    <description>This determines the records that belong to Corporate Contract Payments</description>
    <label>Corporate Contract Payments</label>
</RecordType>