force-app/main/default/objects/Contract_Payments__c/validationRules/Allow_user_to_decrease_the_CP_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Allow_user_to_decrease_the_CP_Amount</fullName>
    <active>true</active>
    <description>Allow user to decrease the Contract Payment Amount when the Proposal status is &quot;Acceptance Required - Customer&quot;</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Corporate_Contract_Payments&apos;,
ISPICKVAL(Proposal__r.Status__c,&apos;Acceptance Required - Customer&apos;),
Amount__c &gt; Payment_Amount__c)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>You can&apos;t increase the Amount when the Proposal status is &apos;Acceptance Required - Customer&apos;</errorMessage>
</ValidationRule>