force-app/main/default/objects/Contract_Payments__c/listViews/Sales_Invoice_Team_Contract_Payments.listView-meta.xml
<ListView>
    <fullName>Sales_Invoice_Team_Contract_Payments</fullName>
    <filterScope>Queue</filterScope>
    <label>Sales Invoice Team</label>
    <queue>Sales_Invoice_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>